# openclaw-ed-crew

./: .env  README.md  pyproject.toml
src/openclaw_ed/: crew.py  main.py
src/openclaw_ed/config/: agents.yaml  tasks.yaml
