[project]
name = "openclaw_ed"
version = "0.1.0"
description = "openclaw_ed using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.14.0,<2.0.0"
]

[project.scripts]
openclaw_ed = "openclaw_ed.main:run"
run_crew = "openclaw_ed.main:run"
kickoff = "openclaw_ed.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
